# whitespace

./: .gitattributes  .gitignore  LICENSE  Makefile  Makefile.common  README.md  TODO.md  debug.h  dump.asm  error.c  error.h  exec_tree.c  exec_tree.h  grammar.lark  hello.wsasm  hello_loop.wsasm  main.c  main.py  parse.c  parse_python_tree.c  parse_whitespace.c  parse_whitespace.h  pyproject.toml  run.sh  runtime.c  runtime.h  setup.py  test  test.wsasm  utility.h  utility.py  utilty.py  whitespace.h  whitespace.lark  whitespace.py  whitespace_assemble_and_run.py  whitespace_assembler.py  whitespace_assembly.lark  whitespace_assembly.py  whitespace_assembly_test.py  (+15 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-c-components.yml  build.yml  unittest.yml
c/: .gitignore  Makefile  exec_tree.c  whitespace.h  whitespace_parser.c
common/: Makefile  exec_tree.c  exec_tree.h  heap.h  parse_whitespace.c  whitespace.c  whitespace.h
common/error/: Makefile  error.c
common/include/: heap.h  runtime.h
common/parse/: Makefile  parse.c
common/runtime/: Makefile  heap.cpp  heap.h  runtime.c  runtime.h
include/common/: heap.h  parse.h  runtime.h  utility.h  whitespace.h
programs/: cat.wsasm  hello.ws  hello.ws.wsasm  hello.wsasm  hello.wsasm.ws  hello_2.ws  long.ws  test.wsasm  test.wsasm.ws  test.wsasm.ws.wsasm
python/: .gitignore  Makefile  character_literal.lark  main.py  setup.py  utility.py  whitespace.py  whitespace_assemble_and_run.py  whitespace_assembler.py  whitespace_assembly.lark  whitespace_disassemble.py  whitespace_module.c
(+2 files in other folders)
