[project]
name = "whitespace"
version = "0.1.0"
description = "Whitespace interpreter / assembler"
authors = [
    {name = "Rusty",email = "rusty3925@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark (==1.2.2)",
    "setuptools (==78.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
