[project]
name = "whitespace"
version = "0.1.0"
description = "Whitespace interpreter / assembler"
authors = [
    {name = "Rusty", email = "rusty3925@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lark>=1.2.2",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.7",
]
